--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ permalink: /
   <div class="container">
     <div class="row">
       <div class="section-title">
-        <h2>Our Services</h2>
+        <h2>Features or Use Cases</h2>
         <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
       </div>
     </div>
@@ -128,9 +128,9 @@ permalink: /
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <h2>We design delightful digital experiences.</h2>
+          <h2>We are here to help you every step of the way</h2>
           <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-          <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
+          <a class="btn btn-default btn-call-to-action" href="https://vineetjvora.github.io/airspace-jekyll/work/" >Tutorials</a>
         </div>
       </div>
     </div>
