--- a/work.html
+++ b/work.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Our Work
-permalink: /work/
+title: Tutorials
+permalink: /tutorials/
 ---
 
     <!-- Slider Start -->
@@ -10,7 +10,7 @@ permalink: /work/
         <div class="row">
             <div class="col-md-12">
                 <div class="block">
-                    <h1>Just some of our latest projects.</h1>
+                    <h1>Just some tutorials to help you get started.</h1>
                     <p>Don’t just take our word for it. Check out some of our latest work.</p>
                 </div>
             </div>
@@ -26,16 +26,16 @@ permalink: /work/
               <div class="portfolio-menu">
                 <ul>
                     <li class="filter" data-filter="all">Everything</li>
-                    <li class="filter" data-filter=".Branding">Branding</li>
-                    <li class="filter" data-filter=".Websites">Websites</li>
-                    <li class="filter" data-filter=".Graphic">Graphic</li>
-                    <li class="filter" data-filter=".design">design</li>
+                    <li class="filter" data-filter=".Start">Getting Started</li>
+                    <li class="filter" data-filter=".Beginner">Beginner Level</li>
+                    <li class="filter" data-filter=".Proficient">Proficient Level</li>
+                    <li class="filter" data-filter=".Advanced">Advanced Level</li>
                     <li class="filter" data-filter=".Video">Video</li>
                 </ul>
               </div>
               <div class="portfolio-contant">
                 <ul id="portfolio-contant-active">
-                    <li class="mix Branding">
+                    <li class="mix Start">
                       <a href="#">
                         <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
                         <div class="overly">
@@ -47,7 +47,7 @@ permalink: /work/
                         </div>
                       </a>
                   </li>
-                  <li class="mix Websites">
+                  <li class="mix Beginner">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work2.jpg" alt="">
                       <div class="overly">
@@ -59,7 +59,7 @@ permalink: /work/
                       </div>
                     </a>
                   </li>
-                  <li class="mix Graphic">
+                  <li class="mix Proficient">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
                       <div class="overly">
@@ -72,7 +72,7 @@ permalink: /work/
 
                     </a>
                   </li>
-                  <li class="mix design">
+                  <li class="mix Advanced">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work4.jpg" alt="">
                       <div class="overly">
@@ -96,7 +96,7 @@ permalink: /work/
                       </div>
                     </a>
                   </li>
-                  <li class="mix Graphic">
+                  <li class="mix Proficient">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work6.jpg" alt="">
                       <div class="overly">
@@ -117,6 +117,7 @@ permalink: /work/
 </section>
 
 <!-- Clients Logo Section Start -->
+<!---
 <section id="clients-logo-section">
   <div class="container">
     <div class="row">
@@ -165,8 +166,7 @@ permalink: /work/
     </div>
   </div>
 </section>
-
-
+--->
 <!-- Call to action Start -->
 <section id="call-to-action">
   <div class="container">
